:lipstick: Fix style & dark mode

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -6,7 +6,6 @@
 .header h1 {
   padding: 0.5rem 0;
   font-weight: 400;
-  color: #000;
 }
 .header h1 a {
   color: inherit;
@@ -27,5 +26,4 @@
   padding: 0 15px;
 }
 .header ul li :global(a.active) {
-  color: var(--accents-3);
 }
